# bare_python_tox_package

./: .gitignore  .pre-commit-config.yaml  .pypirc.example  Jenkinsfile  LICENSE  Pipfile  makefile  pyproject.toml  readme.md  todo.md  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-version.yml  ci.yml  release.yml
docs/: using-in-another-service.md
docs/legacy/: Jenkinsfile  README.md
example/: Makefile  demo.py
scripts/: bump_version.py
src/hello_world/: __init__.py  main.py
tests/: __init__.py  test_hello.py
