[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-package"
dynamic = ["version"]
description = "A hello world Python package for CI/CD demonstration"
readme = "readme.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = ["hello", "world", "demo", "package"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "bandit[toml]>=1.7",
    "pre-commit>=3.0",
    "tox>=4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
hello-world = "hello_world.main:main"

[project.urls]
Homepage = "https://github.com/shotah/bare_python_tox_package"
Repository = "https://github.com/shotah/bare_python_tox_package"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
version = {attr = "hello_world.__version__"}

# Future: To migrate to git-tag versioning, replace the above with:
# [build-system]
# requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
#
# [project]
# dynamic = ["version"]  (keep this)
#
# [tool.setuptools_scm]
# version_scheme = "guess-next-dev"
# local_scheme = "no-local-version"

[tool.ruff]
target-version = "py312"  # ruff doesn't support py314 yet, py312 is compatible
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations - enforce type hints
    "S",      # flake8-bandit (security)
    "PT",     # flake8-pytest-style
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]  # Don't require type hints in tests, allow assert

[tool.ruff.lint.isort]
known-first-party = ["hello_world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
mypy_path = ["src"]
exclude = "(^|/)scripts/"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".tox"]
skips = ["B101"]  # Allow assert in tests

[tool.coverage.run]
source = ["hello_world"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true
